--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PoApiHost": "http://localhost:5000"
+    "PoApiHost": "http://localhost:5000/"
   }
 }
